# waveshare-genui

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix
components/bsp/: bsp.c
daemon/: config.ts  config.yaml  index.tsx  scheduler.tsx  serial.ts  tsconfig.json  types.ts  ui.ts
daemon/screens/: audio.tsx  calendar.tsx  clock.tsx  containers.tsx  departures.tsx  disk.tsx  github.tsx  hackernews.tsx  index.ts  lobsters.tsx  mail.tsx  meeting.tsx  network.tsx  nixos.tsx  notify.tsx  nowplaying.tsx  processes.tsx  reddit.tsx  stocks.tsx  summary.tsx  sysmon.tsx  vcs.tsx  weather.tsx
daemon/sources/: birthdays.ts  build.ts  calendar.ts  clock.ts  commute.ts  disks.ts  idle.ts  index.ts  mail.ts  media.ts  network.ts  notifications.ts  screenlock.ts  sleep.ts  stocks.ts  summary.ts  system.ts  updates.ts  usb.ts  volume.ts  weather.ts  window.ts
firmware/: Cargo.toml  Makefile  patch-tinyusb.sh  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/components/bsp/: CMakeLists.txt  bsp.c  idf_component.yml
firmware/components/bsp/include/: bsp.h
firmware/src/: main.rs
genui/: eslint.config.js  knip.json  package-lock.json  package.json  theme.json  tsconfig.json
genui/examples/: calendar.tsx  clock.tsx  containers.tsx  dashboard.tsx  departures.tsx  gauge.tsx  github.tsx  hackernews.tsx  homeassistant.tsx  image.tsx  list.tsx  llama-cpp.tsx  lobsters.tsx  mail.tsx  (+21 more)
host/: display.py  requirements.txt  stream.py  waveshare_display.py  widgets.py
pi/: AGENTS.md  README.md
scripts/: screenshots.py  screenshots.sh
src/: bindings.h  main.rs
(+36 files in other folders)
